Fixes local nav chevron alignment.

--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -379,7 +379,7 @@ Style guide: Navigation.6 Footer navigation
             @extend %icon-arrow-right;
             padding-left: $base-spacing + $small-spacing;
             background-repeat: no-repeat;
-            background-position: $base-spacing $small-spacing * 1.45;
+            background-position: $base-spacing center;
             background-size: $tiny-spacing auto;
           }
         }
